--- a/and-bible/app/src/main/res/xml/speak_widget_info.xml
+++ b/and-bible/app/src/main/res/xml/speak_widget_info.xml
@@ -3,7 +3,7 @@
                     android:minWidth="110dp"
                     android:minHeight="20dp"
                     android:updatePeriodMillis="86400000"
-                    android:previewImage="@drawable/example_appwidget_preview"
+                    android:previewImage="@drawable/ichthys"
                     android:initialLayout="@layout/speak_widget"
                     android:resizeMode="horizontal|vertical"
                     android:widgetCategory="home_screen"
