Improve speak speed layout

--- a/and-bible/app/src/main/res/layout/speak_bible.xml
+++ b/and-bible/app/src/main/res/layout/speak_bible.xml
@@ -228,12 +228,25 @@
 						android:layout_height="wrap_content"/>
 			</LinearLayout>
 
-			<TextView
-					android:layout_width="wrap_content"
+
+			<LinearLayout
+					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:text="@string/speak_speed_title"/>
+					>
 
+				<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="@string/speak_speed_title"/>
 
+				<TextView
+						android:text="SPEED"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:id="@+id/speedStatus"
+						android:gravity="end"
+						/>
+			</LinearLayout>
 			<SeekBar
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
@@ -241,14 +254,6 @@
 					android:max="300"
 					android:progress="100"
 					/>
-
-			<TextView
-					android:text="SPEED"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:id="@+id/speedStatus"
-					/>
-
 		</LinearLayout>
 	</ScrollView>
 
