--- a/and-bible/app/src/main/res/values/dimens.xml
+++ b/and-bible/app/src/main/res/values/dimens.xml
@@ -39,5 +39,6 @@
 	<dimen name="list_preferred_item_height_small">48dip</dimen>
 	
 	<dimen name="action_button_min_width">56dip</dimen>
+    <dimen name="speak_titles">20sp</dimen>
     <integer name="action_button_max_chars">4</integer>
 </resources>
