Small string and layout improvements

--- a/and-bible/app/src/main/res/layout/speak_bible.xml
+++ b/and-bible/app/src/main/res/layout/speak_bible.xml
@@ -363,11 +363,12 @@
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="20dip"
+                android:paddingTop="5dip"
                 android:paddingBottom="5dip"
                 android:paddingStart="@dimen/speak_row_padding"
                 android:textColor="@color/speak_subtitle_color"
                 android:id="@+id/statusText"
+                android:background="@color/blue_grey_50"
                 android:text="*Gen.1.1*"/>
 
         <!-- Button bar with OK button -->
