--- a/and-bible/app/src/main/res/xml/speak_bookmark_widget_info.xml
+++ b/and-bible/app/src/main/res/xml/speak_bookmark_widget_info.xml
@@ -3,7 +3,7 @@
                     android:minWidth="80dp"
                     android:minHeight="30dp"
                     android:updatePeriodMillis="86400000"
-                    android:previewImage="@drawable/ichthys"
+                    android:previewImage="@drawable/ic_stat_ichthys"
                     android:initialLayout="@layout/speak_widget"
                     android:resizeMode="horizontal|vertical"
                     android:widgetCategory="home_screen"
