--- a/and-bible/app/src/main/res/layout/speak_widget.xml
+++ b/and-bible/app/src/main/res/layout/speak_widget.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+				xmlns:app="http://schemas.android.com/apk/res-auto"
 				xmlns:tools="http://schemas.android.com/tools"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
@@ -78,7 +79,13 @@
 					android:layout_height="wrap_content"
 					android:layout_weight="1"
 					/>
-
+			<ImageButton
+					android:id="@+id/sleepButton"
+					android:src="@drawable/alarm_enabled"
+					android:layout_width="0dip"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					/>
 		</LinearLayout>
 	</LinearLayout>
 
