--- a/and-bible/app/src/main/res/layout/speak_widget.xml
+++ b/and-bible/app/src/main/res/layout/speak_widget.xml
@@ -1,12 +1,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-				xmlns:app="http://schemas.android.com/apk/res-auto"
 				xmlns:tools="http://schemas.android.com/tools"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:background="@color/widget_background"
 				android:padding="@dimen/widget_margin"
 		>
-
+	<ImageView
+			android:layout_alignParentTop="true"
+			android:layout_alignParentEnd="true"
+			android:id="@+id/sleepButton"
+			android:src="@drawable/alarm_enabled"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			/>
 	<LinearLayout
 			android:id="@+id/layout"
 			android:layout_width="fill_parent"
@@ -79,13 +85,7 @@
 					android:layout_height="wrap_content"
 					android:layout_weight="1"
 					/>
-			<ImageButton
-					android:id="@+id/sleepButton"
-					android:src="@drawable/alarm_enabled"
-					android:layout_width="0dip"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					/>
+
 		</LinearLayout>
 	</LinearLayout>
 
